--- a/web/_index.html
+++ b/web/_index.html
@@ -9,6 +9,7 @@
 <ul>
 <li><a href="explore/">Explore</a></li>
 <li><a href="raw/">Raw</a></li>
+<li><a href="express">Expression evaluator</a></li>
 </ul>
 
 </body>
