Paren expression parser now allows quoted strings.  Concat takes an optional 'separator' parameter

--- a/web/express.html
+++ b/web/express.html
@@ -4,7 +4,7 @@
 
 <h2>Expression input</h2>
 
-<form method="POST" action="explore">
+<form method="GET" action="explore">
 <textarea name="uri" rows="20" cols="80">
 </textarea>
 <br />
