Attempted to convert ContentCouchExplorerServlet to use SWF structure, but it's a mess mostly due to that it was already a mess.  Whole thing should be re-thought and re-written.

--- a/web/_index.html
+++ b/web/_index.html
@@ -8,6 +8,7 @@
 
 <ul>
 <li><a href="explore/">Explore</a></li>
+<li><a href="album/">Photo Album</a></li>
 <li><a href="raw/">Raw</a></li>
 <li><a href="express">Expression evaluator</a></li>
 </ul>
