Work on using Swf2 for new explorer servlet.

--- a/web/es1-resources/_index.html
+++ b/web/es1-resources/_index.html
@@ -10,6 +10,7 @@
 <li><a href="explore/">Explore</a></li>
 <li><a href="raw/">Raw</a></li>
 <li><a href="express">Expression evaluator</a></li>
+<li><a href="es2/">The <em>new</em> explorer servlet</a></li>
 </ul>
 
 </body>
