--- a/web/es1-resources/_index.html
+++ b/web/es1-resources/_index.html
@@ -7,10 +7,12 @@
 <p>From here, you may explore your repository.</p>
 
 <ul>
-<li><a href="explore/">Explore</a></li>
-<li><a href="raw/">Raw</a></li>
+<li><a href="explore/">Explore repository</a><ul>
+	<li><a href="album/">Photo album view</a></li>
+	<li><a href="raw/">Raw view</a></li>
+</ul></li>
 <li><a href="express">Expression evaluator</a></li>
-<li><a href="es2/">The <em>new</em> explorer servlet</a></li>
+<li><a href="es2/">The <em>new</em> explorer servlet</a> (a demonstration of some noo technologee; too useful, yet)</li>
 </ul>
 
 </body>
