Added some javascript previewy stuff on photo album pages with pictures because YC requested it

--- a/web/es1-resources/_index.html
+++ b/web/es1-resources/_index.html
@@ -11,7 +11,7 @@
 	<li><a href="album/">Photo album view</a></li>
 	<li><a href="raw/">Raw view</a></li>
 </ul></li>
-<li><a href="express">Expression evaluator</a></li>
+<li><a href="express.html">Expression evaluator</a></li>
 <li><a href="es2/">The <em>new</em> explorer servlet</a> (a demonstration of some noo technologee; too useful, yet)</li>
 </ul>
 
